# QuickTasks

./: .gitignore  ARCHITECTURE.md  CLI.md  CMakeLists.txt  Makefile  PLAN.md  README.md  install.sh  launch.sh  main.cpp  task-calendar-hyprland.conf
src/application/: CalendarFromRepository.hpp
src/application/commands/: AddTaskBarCommand.hpp  AddTaskCalendarCommand.hpp  EditTaskBarCommand.hpp  EditTaskCalendarCommand.hpp  GetCalendarCommand.hpp  GetTaskListCommand.hpp  RemoveTaskBarCommand.hpp  RemoveTaskCalendarCommand.hpp  SetFeaturedTaskCommand.hpp
src/application/handlers/: AddTaskBarHandler.cpp  AddTaskBarHandler.hpp  AddTaskCalendarHandler.cpp  AddTaskCalendarHandler.hpp  EditTaskBarHandler.cpp  EditTaskBarHandler.hpp  EditTaskCalendarHandler.cpp  EditTaskCalendarHandler.hpp  GetCalendarHandler.cpp  GetCalendarHandler.hpp  GetTaskListHandler.cpp  GetTaskListHandler.hpp  RemoveTaskBarHandler.cpp  RemoveTaskBarHandler.hpp  RemoveTaskCalendarHandler.cpp  RemoveTaskCalendarHandler.hpp  SetFeaturedTaskHandler.cpp  SetFeaturedTaskHandler.hpp
src/domain/entities/: Calendar.cpp  Calendar.hpp  CalendarCell.cpp  CalendarCell.hpp  FeaturedTask.cpp  FeaturedTask.hpp  Task.cpp  Task.hpp  TaskList.cpp  TaskList.hpp  TaskNode.hpp
src/domain/repositories/: IFeaturedTaskRepository.hpp  ITaskListRepository.hpp
src/domain/value_objects/: TaskCompleted.hpp  TaskDueDate.cpp  TaskDueDate.hpp  TaskId.cpp  TaskId.hpp  TaskName.cpp  TaskName.hpp
src/infrastructure/controllers/: CliController.cpp  CliController.hpp
src/infrastructure/persistence/: JsonFeaturedTaskRepository.cpp  JsonFeaturedTaskRepository.hpp  JsonTaskListRepository.cpp  JsonTaskListRepository.hpp
task-calendar-ags/: app.ts  dist.js  style.css
task-calendar-ags/compat/: agscompat.ts
task-calendar-ags/components/bar/: BarNavButtons.ts  BarNextButton.ts  BarPrevButton.ts  BarStarIndicator.ts  BarTaskDisplay.ts  BarWidget.ts
task-calendar-ags/components/calendar/: AddTaskDialog.ts  CalendarCellWidget.ts  CalendarGrid.ts  CalendarHeader.ts  CalendarWidget.ts  EditTaskDialog.ts  TaskChip.ts
task-calendar-ags/lib/: process.ts  state.ts
task-calendar-ags/services/: BackendService.ts  ThemeService.ts
task-calendar-ags/state/: AppState.ts  ThemeState.ts
task-calendar-ags/types/: CalendarJSON.ts  TaskListJSON.ts
task-calendar-ags/windows/: BarWindow.ts  CalendarWindow.ts
tests/application/: test_application_main.cpp
tests/domain/: test_domain_main.cpp
tests/persistence/: test_persistence_main.cpp
